<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!--Main-->
    <string name="app_name">Cat Go!</string>

    <!--sign up page-->
    <string name="signup_login_button_text">Log In</string>
    <string name="signup_clear_button_text">Clear</string>
    <string name="signup_username_hint">Username</string>
    <string name="signup_username_available">Available</string>
    <string name="signup_username_notavailable">Unavailable</string>
    <string name="signup_full_name_hint">Full Name</string>
    <string name="signup_password_hint">Password</string>
    <string name="signup_submit_button">Sign Up!</string>
    <string name="signup_picture_description">
        Optional picture (defaults to a cute cat)</string>

    <!--menu-->
    <string name="menu_tag_text">Tag</string>
    <string name="menu_history_text">History</string>
    <string name="menu_score_text">Score</string>
    <string name="menu_setting_text">Settings</string>

    <!--pass_confirm_dialog-->
    <string name="confirm_dialog_pass_dialog">Confirm Password</string>
    <string name="confirm_dialog_retype_pass">Retype here to confirm password</string>
    <string name="confirm_dialog_pass_match">Matches</string>
    <string name="confirm_dialog_pass_unmatch">Not matched</string>
    <string name="confirm_dialog_confirm">Confirm</string>
    <string name="confirm_dialog_cancel">Cancel</string>
    <string name="confirm_dialog_file_provider_authority">com.cs65.gnf.lab1.fileprovider</string>

    <!--login page-->
    <string name="login_login_button">Let\'s Go!</string>
    <string name="login_picture_description">Picture of cat looking into camera</string>
    <string name="login_username">Username:</string>
    <string name="login_pass">Password:</string>
    <string name="login_signup">Create an account</string>

    <!--availability checks-->
    <string name="signup_connection_fail">Connection Failed</string>
    <string name="signup_available">Available</string>
    <string name="signup_unavailable">Unavailable</string>

    <!--preferences-->
    <string name="prefs_group_profile">Profile</string>
    <string name="prefs_group_preferences">Preferences</string>
    <string name="prefs_group_miscellaneous">Miscellaneous</string>

    <!--preferences: sign out-->
    <string name="prefs_signout_title">Sign out</string>
    <string name="prefs_signout_key">Signout</string>
    <string name="prefs_signout_summary">Remove your account from this device</string>

    <!--preferences: new game-->
    <string name="prefs_newgame_title">New Game</string>
    <string name="prefs_newgame_key">newGame</string>
    <string name="prefs_newgame_summary">Start a new game with new cats</string>

    <!--preferences: new password-->
    <string name="prefs_newpass_title">New Password</string>
    <string name="prefs_newpass_key">newPass</string>
    <string name="prefs_newpass_summary">Reset your password</string>

    <!--preferences: min time-->
    <string name="prefs_mintime_title">Time between location updates</string>
    <string name="prefs_mintime_key">minTime</string>
    <string name="prefs_mintime_summary">Minimum time between location updates</string>
    <string-array name="prefs_mintime_entries">
        <item>Continuous</item>
        <item>100 ms</item>
        <item>1 second</item>
    </string-array>
    <string-array name="prefs_mintime_entryValues">
        <item>f</item>
        <item>m</item>
        <item>s</item>
    </string-array>

    <!--preferences: mode-->
    <string name="prefs_mode_title">Game Mode</string>
    <string name="prefs_mode_key">mode</string>
    <string name="prefs_mode_hard">Hard</string>
    <string name="prefs_mode_easy">Easy</string>
    <string name="prefs_mode_summary">Would you like to play on easy or hard mode</string>

    <!--preferences: distance-->
    <string name="prefs_dis_title">Radius of Visible Cats</string>
    <string name="prefs_dis_key">dis</string>
    <string name="prefs_dis_summary">How big the radius of visible cats do you want to see</string>
    <string-array name="prefs_dis_entries">
        <item>100</item>
        <item>200</item>
        <item>500</item>
    </string-array>
    <string-array name="prefs_dis_entryValues">
        <item>s</item>
        <item>m</item>
        <item>l</item>
    </string-array>

    <!--preferences: privacy-->
    <string name="prefs_privacy_title">Privacy Settings</string>
    <string name="prefs_privacy_key">privacy</string>
    <string name="prefs_privacy_summary">Allow other users to see your score?</string>

    <string name="prefs_alert_title">Alert Settings</string>
    <string name="prefs_alert_key">alert</string>
    <string name="prefs_alert_summary">How would you like to be alerted?</string>

    <!--preferences: alert-->
    <string-array name="prefs_alert_entries">
        <item>Vibrate</item>
        <item>Ring</item>
        <item>Nothing</item>
    </string-array>
    <string-array name="prefs_alert_entryValues">
        <item>v</item>
        <item>r</item>
        <item>n</item>
    </string-array>

    <!--Play Tab -->
    <string name="play_username">Hi, XX!</string>
    <string name="play_cat_num">Welcome!</string>
    <string name="play_button">PLAY</string>

    <!--Map -->
    <string name="map_panel_default">Try to click the markers</string>
    <string name="pat_button">PAT</string>

    <!--Success-->
    <string name="success">Success</string>
    <string name="success_infor">Score...</string>
    <string name="success_again">AGAIN</string>
    <string name="success_done">DONE</string>


    <!--Prefs -->
    <string name="prefs_about_title">About us</string>
    <string name="prefs_about_key">About</string>
    <string name="prefs_about_summary">(opens in browser)</string>
</resources>
