<?xml version="1.0" encoding="utf-8"?>

<com.google.android.flexbox.FlexboxLayout
    android:id="@+id/log_in_screen"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    app:flexDirection="column"
    app:alignItems="flex_start"
    app:alignContent="stretch"
    app:flexWrap="nowrap"
    android:background="@color/LGreen"
    android:clickable="true"
    android:focusable="true"
    >
    <ImageView
        android:layout_width="match_parent"
        android:contentDescription="@string/login_picture_description"
        android:layout_height="270dp"
        android:src="@drawable/success_cat"
        android:scaleType="fitCenter"
        android:padding="20dp"
        app:layout_alignSelf="center"
        app:layout_flexShrink="1"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_alignSelf="center"
        android:paddingTop="10dp"
        android:textColor="@color/DPink"
        android:textSize="30dp"
        android:text="@string/success"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_alignSelf="center"
        android:paddingTop="10dp"
        android:text="@string/success_infor"
        android:textColor="@color/Black"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:paddingBottom="10dp"
        >
        <Button
            android:id="@+id/again_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/success_again"
            android:background="@color/DPink"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:onClick="onAgain"
            />
        <Button
            android:id="@+id/done_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/success_done"
            android:background="@color/DGreen"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:onClick="onDone"
            />
    </RelativeLayout>
</com.google.android.flexbox.FlexboxLayout>
